Bug 68839 - ODF import: counter (like "1") added to picture names
Summary: ODF import: counter (like "1") added to picture names
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.0.5.2 release
Hardware: All All
: medium major
Assignee: Michael Stahl (allotropia)
URL:
Whiteboard: odf target:4.2.0 target:4.0.6 target:...
Keywords: regression
: 68613 69792 70197 70610 70728 70985 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-09-02 10:00 UTC by Kevin Suo
Modified: 2013-12-04 14:38 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file which shows the pic names change. (21.07 KB, application/vnd.oasis.opendocument.text)
2013-09-02 10:00 UTC, Kevin Suo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2013-09-02 10:00:21 UTC
Created attachment 85053 [details]
sample file which shows the pic names change.

Description:
When insert a picture into a odt file, apply the pic a name and save, when reopen an extra "1" was added to the name.

Steps to reproduce:
1. Create a new odt file and insert two pictures (or you can just open the attached file);
2. give names to the pictures (right click->picture->option->name, "pic" for the 1st pic, and "pic2" for the 2nd pic), and save;
3. open the file again, names for the two pics become "pic1" and "pic21", respectively;
4. do some edit to the file and save, open again, names for the two pics become "pic11" and "pic211";
5. repeate step 4, more "1" will be added.

result expected:
names for the pics should always be "pic" and "pic2".

This bug exists in LibreOffice 4.0.5.2 and 4.1.1.2. Not tested in 3.X, may be a regression.
Comment 1 Thomas van der Meulen [retired] 2013-09-02 15:14:42 UTC
Thank you for your bug report, I can reproduce this bug running LibreOffice.
Version: 4.1.1.2
Build ID: 7e4286b58adc75a14f6d83f53a03b6c11fa2903  & Version 4.0.5.2 (Build ID: 5464147a081647a250913f19c0715bca595af2f)
on Mac osx 10.8.4. 

it was still good in Version 3.6.7.2 (Build ID: e183d5b) so it is a regression ...
Comment 2 Michael Stahl (allotropia) 2013-09-02 22:57:48 UTC
worked in LO 3.6.7, broken in LO 4.0.0
worked in OOo 3.4 beta, broken in AOO 3.4.0

bug was introduced by ALv2 rebase commit 44cfc7cb6533d827fd2d6e586d92c61d7d7f7a70

strangely the same problem does not happen in Draw,
apparently the names of Draw graphics don't need to be unique?

fixed on master
Comment 3 Commit Notification 2013-09-02 23:06:35 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b69d152cfa1da868ba960345d72ba78f9f8e1b35

fdo#68839: ODF import: fix name of multi-image frame



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Kevin Suo 2013-09-03 01:49:07 UTC
excellent job!
a bug got fixed in 13 hours!
Comment 5 Commit Notification 2013-09-03 19:50:55 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=628ed5e89b6c92d41c4ba411ec53ff6bb0f3fbc8&h=libreoffice-4-0

fdo#68839: ODF import: fix name of multi-image frame


It will be available in LibreOffice 4.0.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-09-03 22:28:09 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3c8bee809d248ef1fd39ebeae68de84ce70d358a

fdo#68839: add unit test



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2013-09-04 08:50:07 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=11c465ef8205cf946b3c0810f7305fa9dd6c0bc0&h=libreoffice-4-1

fdo#68839: ODF import: fix name of multi-image frame


It will be available in LibreOffice 4.1.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 ign_christian 2013-10-05 01:30:18 UTC
*** Bug 69792 has been marked as a duplicate of this bug. ***
Comment 9 Julien Nabet 2013-10-21 19:44:59 UTC
*** Bug 70610 has been marked as a duplicate of this bug. ***
Comment 10 Maxim Monastirsky 2013-10-22 12:09:31 UTC
*** Bug 70728 has been marked as a duplicate of this bug. ***
Comment 11 Maxim Monastirsky 2013-10-23 10:42:42 UTC
*** Bug 68613 has been marked as a duplicate of this bug. ***
Comment 12 Caolán McNamara 2013-10-29 10:28:00 UTC
*** Bug 70197 has been marked as a duplicate of this bug. ***
Comment 13 Maxim Monastirsky 2013-10-29 14:35:01 UTC
*** Bug 70985 has been marked as a duplicate of this bug. ***