fdo#68839: ODF import: fix name of multi-image frame

When multiple image child elements are inside a frame, each one is
imported and gets unique name via SwDoc::SetFlyName().  But the
retained one is not necessarily the first one, which is the only one
that may have the original name.

Also the solveMultipleImages needs to return a smart pointer, as nothing
else keeps the image contexts alive.

(regression from 44cfc7cb6533d827fd2d6e586d92c61d7d7f7a70)

Change-Id: I28a8a752f3eed176cc2ebb4c9af11a0dd4d18ea6